# DPLL_CDCL

./: Cargo.toml  README.md  dhat-heap.json
data/: simple.txt
src/: benchmark.rs  dimacs_converter.rs  dpll.rs  main.rs  reader.rs  schemas.rs  tests.rs  utils.rs
src/dpll/: dpll.rs  heuristic.rs  schemas.rs
tests/: main_test.rs
